# bevy_game

./: .gitignore  Cargo.toml  Shuttle.toml  Trunk.toml  index.html  initializer.mjs  shuttle_postbuild.sh
game/: Cargo.toml  build.rs
game/src/: main.rs
game/src/game/: assets.rs  asteroids.rs  background.rs  in_game_overlay.rs  mod.rs  particle_effects.rs  player.rs  scoreboard.rs
game/src/game/player/: camera.rs  component.rs  mod.rs  movement.rs  setup.rs
game/src/game/player/experience/: mod.rs  pickup.rs
game/src/game/weapons/: mod.rs
game/src/menu/: mod.rs
server/: Cargo.toml  build.rs
server/src/: main.rs
server/web/: index.html
