[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = ["dynamic_linking",
  "android-game-activity",
  "android_shared_stdcxx",
  "animation",
  "bevy_asset",
  "bevy_audio",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_gizmos",
#  "bevy_gltf",
  "bevy_mesh_picking_backend",
#  "bevy_pbr",
  "bevy_picking",
  "bevy_render",
  "bevy_scene",
  "bevy_sprite",
  "bevy_sprite_picking_backend",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "bevy_window",
  "bevy_winit",
  "custom_cursor",
  "default_font",
  "hdr",
  "multi_threaded",
  "png",
  "smaa_luts",
  "sysinfo_plugin",
  "tonemapping_luts",
  "vorbis",
  "webgl2",
  "x11",] }
bevy-kenney-assets = "0.2.0"
bevy_asset_loader = "0.22.0"
bevy_tiling_background = "0.12.0"